# pastebin

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
Pastebin/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
tasks/: tasks.py
texts/: models.py  services.py  urls.py  utils_functions.py  views.py
texts/services/: cache_service.py  password_service.py  text_block_service.py
texts/utils/: s3_service.py
